--- a/style.css
+++ b/style.css
@@ -63,7 +63,9 @@ div.project a {
     color: white;
 }
 
-
+span#small_dscr {
+    font-size: .7em;
+}
 
 @media  screen and(min-width: 1000px) {
     #tiles div.project {
