--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body > h1 {
     height: 40%;
     border-radius: 8px;
     background-size: auto 100%;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
     background-color: rgb(41, 41, 41);
     display: flex;
     align-items: center;
